Add authorize And register not completely

--- a/project_dl/article/templates/article.html
+++ b/project_dl/article/templates/article.html
@@ -11,10 +11,12 @@
 {% for comment in comments %}
     <p>{{ comment.comment_text }}</p>
 {% endfor %}
+        {% if username %}
         <form action="/articles/addcomment/{{ article.id }}/" method="post">
             {%  csrf_token %}
             {{ form }}
             <input type="submit" class="button" value="Add comment">
         </form>
+    {% endif %}
     </div>
 {% endblock %}
