--- a/project_dl/article/templates/articles.html
+++ b/project_dl/article/templates/articles.html
@@ -1,14 +1,39 @@
-
 {% extends 'main.html' %}
 {% load staticfiles %}
 {% block article %}
     <div class="large-8 columns">
-{% for article in articles %}
-    <h6>Date of the publishing: {{ article.article_date }}</h6>
-    <h4><a href="/articles/get/{{ article.id }}">{{ article.article_title }}</a></h4>
-    <p>{{ article.article_text }}</p>
-    <p><a href="/articles/addlike/{{ article.id }}/"><img src="{% static "like.jpg" %}" width="25px" height="25px"></a>Liked: {{ article.article_likes }}</p>
-    <hr>
-{% endfor %}
+        {% for article in articles %}
+            <h6>Date of the publishing: {{ article.article_date }}</h6>
+            <h4><a href="/articles/get/{{ article.id }}">{{ article.article_title }}</a></h4>
+            <p>{{ article.article_text }}</p>
+            <p><a href="/articles/addlike/{{ article.id }}/"><img src="{% static "like.jpg" %}" width="25px" height="25px"></a>Liked: {{ article.article_likes }}</p>
+            <hr>
+        {% endfor %}
+    </div>
+    <div class="row">
+        <div class="large-3 large-offset-5 columns">
+            <nav aria-label="Pagination">
+            <ul class="pagination">
+                {% if articles.has_previous %}
+                    <li class="pagination-previous enabled"><a href="/page/{{ articles.previous_page_number }}" aria-label="Previous page">Previous <span class="show-for-sr">{{ page }}</span></a></li>
+                {% else %}
+                <li class="pagination-previous disabled">Previous <span class="show-for-sr">page</span></li>
+                {% endif %}
+                {% for page in articles.paginator.page_range %}
+                    {% if page == articles.number %}
+                        <li class="current"><span class="show-for-sr">You're on page</span>{{ page }}</li>
+                    {% else %}
+                        <li><a href="/page/{{ page }}">{{ page }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            {% if articles.has_next %}
+                <li class="pagination-next enabled"><a href="/page/{{ articles.next_page_number }}" aria-label="Next page">Next <span class="show-for-sr">{{ page }}</span></a></li>
+            {% else %}
+                <li><a href="/page/{{ page }}" aria-label="Page 2">{{ page }}</a></li>
+            {% endif %}
+
+            </ul>
+            </nav>
+        </div>
     </div>
 {% endblock %}
