--- a/project_dl/loginsys/templates/signup.html
+++ b/project_dl/loginsys/templates/signup.html
@@ -1,11 +1,21 @@
 {% extends 'main.html' %}
 
 {% block login %}
-    <div class="large-offset-3 large-6 columns">
-        <form action="/auth/signup/" method="post">
-           {% csrf_token %}
-            {{ form }}
-            <input class="button" type="submit" value="Sign Up">
-        </form>
-    </div>
+    <h2>Sign up</h2>
+  <form action="/auth/signup/" method="post">
+    {% csrf_token %}
+    {% for field in form %}
+      <p>
+        {{ field.label_tag }}<br>
+        {{ field }}
+        {% if field.help_text %}
+          <small style="color: grey">{{ field.help_text }}</small>
+        {% endif %}
+        {% for error in field.errors %}
+          <p style="color: red">{{ error }}</p>
+        {% endfor %}
+      </p>
+    {% endfor %}
+    <input class="button" type="submit" value="Sign Up">
+  </form>
 {% endblock %}
