--- a/project_dl/article/templates/search.html
+++ b/project_dl/article/templates/search.html
@@ -1,6 +1,6 @@
 {% extends "main.html"%}
 
-{% block content %}
+{% block article %}
   {% if search_res %}
   <br>
     {% for article in search_res%}
