--- a/project_dl/static/css/style.css
+++ b/project_dl/static/css/style.css
@@ -34,7 +34,9 @@ pre {
   font-size: 1em; }
 
 a {
-  background-color: transparent; }
+  background-color: transparent;
+  text-decoration: #9e0c0f;
+}
 
 abbr[title] {
   border-bottom: none;
