--- a/project_dl/templates/main.html
+++ b/project_dl/templates/main.html
@@ -13,10 +13,10 @@
     <div class="top-bar">
           <div class="top-bar-left">
             <ul class="menu">
-              <li><a href="/">DL</a></li>
+                <li><u><a href="/">DL</a></u></li>
                 {% if username %}
-                    <li><a href="/user/">Subjects</a></li>
-                    <li><a href="/mail/">Mail</a></li>
+                    <li><u style="text-decoration-color: #258faf;"><a href="/user/">Subjects</a></u></li>
+                    <li><u style="text-decoration-color: #258faf"><a href="/mail/">Mail</a></u></li>
                 {% endif %}
             </ul>
         </div>
@@ -52,7 +52,6 @@
             <div class="small-8 columns">{% block article %}{% endblock %}</div></div>
     </div>
 <div class="grid-container">
-{% block uploads %}{% endblock %}
 {% block login %}{% endblock %}
 
 </div>
