--- a/project_dl/article/templates/articles.html
+++ b/project_dl/article/templates/articles.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+{% extends "main.html"%}
 {% load staticfiles %}
 {% block article %}
     <div class="large-8 columns">
@@ -6,7 +6,7 @@
             <h6>Date of the publishing: {{ article.article_date }}</h6>
             <h4><a href="/articles/get/{{ article.id }}">{{ article.article_title }}</a></h4>
             <p>{{ article.article_text }}</p>
-            <p><a href="/articles/addlike/{{ article.id }}/"><img src="{% static "like.jpg" %}" width="25px" height="25px"></a>Liked: {{ article.article_likes }}</p>
+            <p><a href="/articles/addlike/{{ article.id }}/"><img src="{% static  "img/like.jpg" %}" width="25px" height="25px"></a>Liked: {{ article.article_likes }}</p>
             <hr>
         {% endfor %}
     </div>
